[gd_scene load_steps=5 format=3 uid="uid://ct8jgbl27xwgu"]

[ext_resource type="Script" uid="uid://00s8fp7npabp" path="res://scenes/game/drop-zone/DropZone.gd" id="1_3egly"]
[ext_resource type="Texture2D" uid="uid://brbwgupq832jq" path="res://scenes/all-scenes-assets/tablon_de_madera.png" id="1_6bkfq"]
[ext_resource type="AudioStream" uid="uid://bccokjr20cow8" path="res://scenes/game/cards/audio/card-slide-8.ogg" id="3_nthrk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3egly"]
size = Vector2(879, 257.5)

[node name="DropZone" type="Node2D"]
script = ExtResource("1_3egly")

[node name="TablonDeMadera" type="Sprite2D" parent="."]
position = Vector2(511, 162)
scale = Vector2(0.88444, 0.568359)
texture = ExtResource("1_6bkfq")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(19, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(471, 149)
shape = SubResource("RectangleShape2D_3egly")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 32.0
offset_right = 90.0
offset_bottom = 72.0

[node name="CardsContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlaySoundStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nthrk")

[connection signal="area_entered" from="Area2D" to="." method="dropZoneAreaEntered"]
[connection signal="area_exited" from="Area2D" to="." method="dropZoneAreaExited"]
